Enhance build and run instructions in README
Updated instructions for building and running the game, including details for running from source and using the JAR.